--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
     "@hello-pangea/dnd": "^17.0.0",
     "@mui/icons-material": "^6.4.3",
     "@mui/material": "^6.4.3",
+    "@mui/x-date-pickers": "^7.26.0",
     "@reduxjs/toolkit": "^2.5.1",
+    "date-fns": "^2.30.0",
+    "dayjs": "^1.11.13",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-quill-new": "^3.3.3",
     "react-redux": "^9.2.0",
     "redux": "^5.0.1",
     "sass": "^1.84.0"
